🖥️ UI | Done MyProfile.xml
MyProfile.xml 파일 UI 구현 완료
Activity 기능 구현 미완

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="gray1">#F6F5F1</color>
     <color name="gray2">#D6D4CE</color>
     <color name="gray3">#92908B</color>
+    <color name="red">#FF2E00</color>
+
 
 </resources>
