🖥️ Edit | edit MyProfile.xml
swith 속성 값 변경 : Green

--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:background="@color/yellow"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:layout_marginBottom="30dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -63,11 +64,15 @@
                 android:text="알림 설정 On/Off"
                 android:layout_weight="1" />
 
+            <!-- On/Off 스위치 속성값 : Green -->
             <Switch
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:checked="true" />
+                android:checked="true"
+                android:thumbTint="@color/green"
+                android:trackTint="@color/green"
+            />
 
         </LinearLayout>
 
