--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     tools:context=".login">
 
+    <!-- 로고 Box : 옐로우 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,6 +27,7 @@
 
     </LinearLayout>
 
+    <!-- 로그인 UI 삽입 : 화이트 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -33,6 +35,7 @@
         android:gravity="center_vertical"
         android:orientation="vertical">
 
+        <!-- 소셜로그인 txt -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +44,7 @@
             android:text="------------   소셜로그인   ------------\n"
             />
 
+        <!-- 카카오 로그인 img -->
         <ImageView
         android:id="@+id/login"
         android:layout_width="match_parent"
@@ -51,6 +55,7 @@
 
 </LinearLayout>
 
+    <!-- 하단 Box : 옐로우 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
