--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     tools:context=".login">
 
+    <!-- Logo 레이아웃 : yellow -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,6 +27,7 @@
 
     </LinearLayout>
 
+    <!-- Login 레이아웃 : white -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -51,6 +53,7 @@
 
 </LinearLayout>
 
+    <!-- bottom bar : yellow -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
