🖥️ Edit | edit MyProfile.xml
1. 알림 On/Off Avtivity 기능 구현

--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -65,10 +65,13 @@
                 android:layout_weight="1" />
 
             <Switch
+                android:id="@+id/notificationSwitch"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:checked="true" />
+                android:checked="true"
+                android:trackTint="@color/green"
+                android:thumbTint="@color/green"/>
 
         </LinearLayout>
 
