--- a/app/src/main/res/drawable/button_yellow.xml
+++ b/app/src/main/res/drawable/button_yellow.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="50dp" /> <!-- 버튼의 모서리 반지름을 조절하여 둥글게 만듭니다. -->
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:state_pressed="true">
+    <shape android:shape="rectangle">
+        <corners android:radius="30dp" /> <!-- 버튼의 모서리 반지름을 조절하여 둥글게 만듭니다. -->
+        <solid android:color="@color/yellow_pressed" /> <!-- 버튼의 배경색을 설정합니다. -->
+    </shape>
+</item>
+<item>
+<shape android:shape="rectangle">
+    <corners android:radius="30dp" /> <!-- 버튼의 모서리 반지름을 조절하여 둥글게 만듭니다. -->
     <solid android:color="@color/yellow" /> <!-- 버튼의 배경색을 설정합니다. -->
 </shape>
+</item>
+</selector>
