--- a/app/src/main/res/layout/activity_set_address.xml
+++ b/app/src/main/res/layout/activity_set_address.xml
@@ -53,8 +53,9 @@
 
             <!-- 주소지 검색입력창 -->
             <EditText
+                android:id="@+id/getAddress"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColor="@color/gray2"
                 android:textSize="15sp"
                 android:gravity="center_vertical|start"
@@ -63,6 +64,7 @@
 
             <!-- 검색 버튼 -->
             <ImageView
+                android:id="@+id/search_button"
                 android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
@@ -139,13 +141,14 @@
 
     <!-- 확인 버튼 : yellow -->
     <Button
+        android:id="@+id/button_setAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="확인"
         android:layout_marginHorizontal="100dp"
         android:layout_marginBottom="15dp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:background="@drawable/button_yellow"/>
+        android:background="@drawable/button_yellow"
+        android:text="확인" />
 
 </LinearLayout>
