--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FDE403</color>
+    <color name="yellow_pressed">#FCA903</color>
     <color name="green">#8FCD50</color>
     <color name="gray1">#F6F5F1</color>
     <color name="gray2">#D6D4CE</color>
