add database, layout write
+데이터베이스 연동, 글쓰기 레이아웃
커뮤니티 메인 화면 수정함

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.noah.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_boardWrite"
+        android:name="com.example.noah.ui.home.BoardWrite"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_board_write" />
+
 </navigation>
