🔨Edit | Add activity Logout, DelId
로그아웃, 회원탈퇴 기능 구현

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
 
         <!-- 카카오 로그인 img -->
         <ImageView
-        android:id="@+id/login"
+        android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/kakao_login"
