--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,5 +27,15 @@
         android:name="com.example.noah.ui.home.BoardWrite"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_board_write" />
+    <fragment
+        android:id="@+id/navigation_whatToDo"
+        android:name="com.example.noah.ui.home.whatToDo"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_what_to_do" />
+    <activity
+        android:id="@+id/navigation_my_profile"
+        android:name="com.example.noah.MyProfile"
+        android:label="@string/title_home"
+        tools:layout="@layout/activity_my_profile" />
 
 </navigation>
