--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.noah.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_community"
         tools:layout="@layout/fragment_home" />
 
     <fragment
@@ -25,17 +25,17 @@
     <fragment
         android:id="@+id/navigation_boardWrite"
         android:name="com.example.noah.ui.home.BoardWrite"
-        android:label="@string/title_home"
+        android:label="@string/title_write"
         tools:layout="@layout/fragment_board_write" />
     <fragment
         android:id="@+id/navigation_whatToDo"
-        android:name="com.example.noah.ui.home.whatToDo"
-        android:label="@string/title_home"
+        android:name="com.example.noah.ui.home.whatTodo"
+        android:label="@string/title_what_to_do"
         tools:layout="@layout/fragment_what_to_do" />
     <activity
         android:id="@+id/navigation_my_profile"
         android:name="com.example.noah.MyProfile"
-        android:label="@string/title_home"
+        android:label="@string/title_my_profile"
         tools:layout="@layout/activity_my_profile" />
 
 </navigation>
