🖥️ Edit | 화면 이동
첫 입장 시 로고 화면 2초 후

1. 로그인o -> 메인 화면
2. 로그인x -> 로그인 화면
2-1. 로그인 성공 시 로그인 -> 메인 화면

메인화면 이동은 어떤 Activity사용하는지 몰라서 비워뒀습니다!

--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -148,6 +148,7 @@
 
         <!-- 주소지 변경 -->
         <LinearLayout
+            android:id="@+id/set_Address"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:orientation="horizontal"
