--- a/app/src/main/res/layout/fragment_board_write.xml
+++ b/app/src/main/res/layout/fragment_board_write.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/rounded_box_white"
         app:cardCornerRadius="2dp">
 
@@ -20,7 +20,7 @@
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:paddingHorizontal="30dp">
+            android:layout_marginHorizontal="30dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,7 +36,6 @@
                 android:id="@+id/regist_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:background="@drawable/button_yellow"
                 android:text="등록" />
 
@@ -45,29 +44,32 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/rounded_box_gray2"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="100dp">
-            
+            android:layout_marginRight="30dp">
+
             <EditText
                 android:id="@+id/title_edit"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_margin="10dp"
                 android:hint="제목: 제목을 입력하세요"
-                android:textColorHint="@color/gray1"/>
+                android:textColorHint="@color/gray1"
+                android:backgroundTint="@color/gray1"/>
+
             <EditText
                 android:id="@+id/contents_edit"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="260dp"
                 android:gravity="top"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:hint="내용을 입력하세요"
-                android:textColorHint="@color/gray1"/>
+                android:textColorHint="@color/gray1" />
+
+
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -75,12 +77,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
             android:clickable="true"
             android:src="@drawable/ic_image"
             android:backgroundTint="@color/white"
             app:borderWidth="1dp"
             app:backgroundTint="@color/gray2"/>
+
+
     </LinearLayout>
 
 
