--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context=".ui.notifications.NotificationsFragment">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_notification"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/recyclerview_item_notification" />
 
 </LinearLayout>
