커뮤니티 화면에서 글 클릭했을 때 댓글 화면으로 전환 지도 타이틀 String수정 커뮤니티 레이아웃 수정

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.noah.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_map"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
@@ -37,6 +37,11 @@
         android:name="com.example.noah.MyProfile"
         android:label="@string/title_my_profile"
         tools:layout="@layout/activity_my_profile" />
+    <fragment
+        android:id="@+id/navigation_comment"
+        android:name="com.example.noah.ui.home.Comment"
+        android:label="@string/title_community"
+        tools:layout="@layout/fragment_comment" />
 
 
 </navigation>
