--- a/app/src/main/res/layout/fragment_board_write.xml
+++ b/app/src/main/res/layout/fragment_board_write.xml
@@ -44,10 +44,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/rounded_box_gray2"
             android:layout_marginLeft="30dp"
+            android:layout_weight="1"
             android:layout_marginRight="30dp">
 
             <EditText
@@ -62,7 +63,7 @@
             <EditText
                 android:id="@+id/contents_edit"
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="match_parent"
                 android:gravity="top"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
@@ -70,20 +71,22 @@
                 android:textColorHint="@color/gray1" />
 
 
-        </LinearLayout>
 
+        </LinearLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginVertical="10dp"
             android:clickable="true"
             android:src="@drawable/ic_image"
-            android:backgroundTint="@color/white"
             app:borderWidth="1dp"
-            app:backgroundTint="@color/gray2"/>
+            app:tint="@color/yellow"
+            android:backgroundTint="@color/white"
+            app:backgroundTint="@color/yellow"/>
+
 
 
     </LinearLayout>
