--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -32,7 +32,7 @@
 
                 />
             <TextView
-                android:id="@+id/item_title_text"
+                android:id="@+id/comments_item_title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="title."
@@ -42,7 +42,7 @@
                 android:textColor="@android:color/black"
                 />
             <TextView
-                android:id="@+id/item_contents_text"
+                android:id="@+id/comments_item_contents_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="contents."
@@ -52,14 +52,79 @@
                 />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/custom_rounded_box_gray2">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="17sp"
+                android:text="댓글"/>
+
+        </LinearLayout>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/commnets_recyclerView"
-            android:layout_margin="8dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="8dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/commnets_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/comments_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:padding="6dp"
+                    android:hint="댓글을 입력하세요."
+                    android:textSize="18sp"
+                    android:textColorHint="@color/white"
+                    android:background="@drawable/rounded_box_gray2"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+                <ImageButton
+                    android:id="@+id/img_send"
+                    android:layout_width="?attr/actionBarSize"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_send"
+                    android:rotation="-60"
+                    android:padding="6dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
