--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -154,7 +154,8 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:paddingHorizontal="15dp"
-            android:background="@drawable/rounded_box_gray1">
+            android:background="@drawable/rounded_box_gray1"
+            android:textColor="@color/gray3">
 
             <TextView
                 android:layout_width="wrap_content"
