댓글기능 수정하다가 에러 해결 안 돼서 일단 이 상태로 커밋.. 앱 아이콘, 로딩 화면(splash)바꿈, 하단 바 아이콘 색 변경, 하단 바 색 변경

--- a/app/src/main/res/layout/logo.xml
+++ b/app/src/main/res/layout/logo.xml
@@ -2,24 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/yellow">
 
     <!-- Logo 레이아웃 : yellow -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:background="@color/yellow"
-        >
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo"/>
-
-    </LinearLayout>
-
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo" />
 
 
 </LinearLayout>
