--- a/app/src/main/res/layout/fragment_board_write.xml
+++ b/app/src/main/res/layout/fragment_board_write.xml
@@ -5,7 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray1"
+    android:orientation="vertical"
     tools:context=".ui.home.BoardWrite">
+    <!--로그인 기능 추가 전 식별값 임시로 받아오려고 만듦-->
+    <EditText
+        android:id="@+id/id_edit_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="id 값 임시로 받아옴" />
 
     <LinearLayout
         android:layout_width="match_parent"
