🖥️ Add | intent 추가
1. 로그아웃, 탈퇴 후 로그인화면으로 이동
2. 글쓰기 xml 조금 수정

--- a/app/src/main/res/layout/fragment_board_write.xml
+++ b/app/src/main/res/layout/fragment_board_write.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="70dp"
+        android:paddingVertical="30dp"
         android:background="@drawable/rounded_box_white"
         app:cardCornerRadius="2dp">
 
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/rounded_box_gray2"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp">
 
