--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,4 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+<!--    &lt;!&ndash; 버튼 &ndash;&gt;-->
+<!--    <Button-->
+<!--        android:id="@+id/overlayButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="재난지역 추가"-->
+<!--        android:layout_gravity="bottom|center"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        android:textSize="16sp"-->
+<!--        android:padding="16dp"/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
