--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/gray1">
+        <!--클릭한 글-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,6 +53,7 @@
                 />
 
         </LinearLayout>
+        <!--댓글-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,7 +70,6 @@
 
         </LinearLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -76,6 +77,7 @@
             android:orientation="vertical"
             android:layout_marginHorizontal="8dp">
 
+            <!--댓글 리사이클러뷰-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/commnets_recyclerView"
                 android:layout_width="match_parent"
@@ -87,6 +89,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
 
+            <!--댓글 쓰는 곳-->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
