--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!--글쓰기 버튼-->
         <Button
             android:id="@+id/main_write_button"
             android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
             app:layout_constraintEnd_toStartOf="@+id/main_My_button"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!--마이페이지 버튼-->
         <Button
             android:id="@+id/main_My_button"
             android:layout_width="wrap_content"
