--- a/app/src/main/res/layout/recyclerview_item_notification.xml
+++ b/app/src/main/res/layout/recyclerview_item_notification.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/gray3"
@@ -29,7 +30,7 @@
                 android:textColor="@color/white"/>
 
             <TextView
-                android:id="@+id/text_comment"
+                android:id="@+id/NotifyComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
