--- a/app/src/main/res/layout/recyclerview_item_notification.xml
+++ b/app/src/main/res/layout/recyclerview_item_notification.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="75dp"
+    android:orientation="horizontal"
+    android:background="@color/gray3"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="7dp">
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray3"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="7dp">
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -37,9 +33,7 @@
                 android:textSize="12sp"
                 android:text="text"
                 android:textColor="@color/white"/>
-
         </LinearLayout>
-    </LinearLayout>
 
 
 </LinearLayout>
